--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,7 +5,10 @@
     "scripts": {
         "dev": "tsx watch src/index.ts",
         "build": "tsc",
-        "start": "node dist/index.js"
+        "start": "node dist/index.js",
+        "prisma:generate": "prisma generate",
+        "prisma:migrate": "prisma migrate dev",
+        "prisma:push": "prisma db push"
     },
     "dependencies": {
         "fastify": "^4.26.0",
@@ -13,15 +16,14 @@
         "fastify-type-provider-zod": "^1.1.9",
         "@fastify/cors": "^9.0.1",
         "@fastify/multipart": "^8.1.0",
-        "drizzle-orm": "^0.29.3",
-        "postgres": "^3.4.3",
+        "@prisma/client": "^6.0.0",
+        "prisma": "^6.0.0",
         "minio": "^7.1.3",
         "dotenv": "^16.4.1"
     },
     "devDependencies": {
         "tsx": "^4.7.0",
         "typescript": "^5.3.3",
-        "@types/node": "^20.11.16",
-        "drizzle-kit": "^0.20.13"
+        "@types/node": "^20.11.16"
     }
 }
